--- a/src/alpha/langs/lang.ms.json
+++ b/src/alpha/langs/lang.ms.json
@@ -1,17 +1,15 @@
 {
   "running":"Menjalankan plug&#179; versi %1",
-  "commandsHelp":"Gunakan '\/commands' untuk melihat arahan chat diperluaskan.",
+  "commandsHelp":"Gunakan '/commands' untuk melihat arahan chat diperluaskan.",
   "autorespond":{
     "default":"Saya tidak didepan komputer sekarang",
     "disable":"Hentikan AFK AutoJawap untuk berbual",
     "nextIn":"AFK auto jawap yang seterusnya akan hantar dari %1",
     "next":"AFK AutoJawap atas mention seterusnya",
-    "commandDisable":"%1 AFK mesej dihentikan",
-    "commandNotEnabled":"%1 AFK mesej tidak dibuka"
+    "commandDisable":"%1 AFK mesej dihentikan"
   },
   "autojoin":{
-    "commandDisable":"%1 auto menyertai disable",
-    "commandNotEnabled":"%1 auto menyertai tidak enable"
+    "commandDisable":"%1 auto menyertai disable"
   },
   "fullscreen":{
     "shrink":"Mengecut",
@@ -30,8 +28,8 @@
       "number":"nombor"
     },
     "descriptions":{
-      "join":"Menyertai dj booth\/senarai menunggu",
-      "leave":"Meninggalkan dj booth\/senarai menunggu",
+      "join":"Menyertai dj booth/senarai menunggu",
+      "leave":"Meninggalkan dj booth/senarai menunggu",
       "whoami":"dapatkan maklumat anda sendiri",
       "mute":"menetapkan volume ke 0",
       "automute":"daftar lagu yang sedang dimain secara automatik mute di masa depan",
@@ -41,7 +39,7 @@
       "alertson":"memainkan bunyi setiap kali perkataan yang ditakrifkan muncul dalam chat",
       "alertsoff":"hentikan bunyi setiap kali perkataan yang ditakrifkan muncul dalam chat",
       "grab":"Menambahkan Lagu Sekarang ke dalam senarai main yang anda pilih",
-      "badges":"Tunjuk\/Simpan lencana pengguna dalam chat",
+      "badges":"Tunjuk/Simpan lencana pengguna dalam chat",
       "getpos":"mendapatkan kedudukan senarai menunggu semasa",
       "version":"memaparkan nombor versi",
       "commands":"menunjukkan senarai ini",
@@ -52,12 +50,13 @@
       "lockskip":"kunci DJ booth, skip dan buka semula lepas itu",
       "lock":"Kunci DJ booth",
       "unlock":"buka kunci DJ booth",
-      "add":"menambahkan target pengguna ke dj booth\/senarai menunggu",
-      "remove":"mengeluarkan target pengguna dari dj booth\/senarai menunggu",
+      "add":"menambahkan target pengguna ke dj booth/senarai menunggu",
+      "remove":"mengeluarkan target pengguna dari dj booth/senarai menunggu",
       "whois all":"memberikan id pengguna dan nama pengguna daripada semua pengguna di dalam bilik",
       "banall":"ban semua pengguna di dalam bilik",
       "status":"Menunjukkan status Pelayan Plug",
-      "unload":"Tutupkan Plug&#179;"
+      "unload":"Tutupkan Plug&#179;",
+      "volume":"Menetapkan kelantangan dengan nombor (0-100), meningkatkan dengan 1 bersama +, menurun dengan 1 bersama -"
     },
     "responses":{
       "alertson":"Berbunyi pada perkataan yang berikut: %1",
@@ -80,34 +79,37 @@
   "eta":{
     "boothAvailable":"Jikalau anda menyertai senarai menunggu sekarang, anda akan DJing!",
     "alreadyDJ":"Andah sedang DJing!",
-    "waitListTime":"Anda berada di %1 \/ %2 pada senarai menunggu, anda akan DJing pada lebih kurang %3 nanti!",
+    "waitListTime":"Anda berada di %1 / %2 pada senarai menunggu, anda akan DJing pada lebih kurang %3 nanti!",
     "joinTime":"Jikalau anda menyertai senarai menunggu sekarang, anda akan DJing pada lebih kurang %1 nanti!"
   },
   "notify":{
-    "header":"Maklumat pengguna",
+    "deletedMessages":"dipadamkan oleh ",
     "join":"Pengguna menyertai",
     "leave":"Pengguna meninggalkan",
     "grab":"Koleksi Pengguna",
     "meh":"Meh Pengguna",
     "stats":"statistik lagu",
     "updates":"Lagu update",
+    "updatesLink":"Pautan lagu",
     "history":"Lagu dalam sejarah",
     "songUnavailable":"Lagu tidak available",
-    "boothAlert":"Alert untuk Booth (%1 \/ 50)",
+    "boothAlert":"Alert untuk Booth (%1 / 50)",
     "songLength":"Kepanjangan Lagu (%1 min)",
     "message":{
       "boothAlertNext":"Anda akan main seterusnya!",
       "boothAlertPos":"Anda sekarang berada di %1 dalam senarai menunggu",
       "grab":"telah grab %1 - %2",
       "stats":"statistik: %1 woot -- %2 meh -- %3 Koleksi",
-      "updates":"Sekarang Memainkan: %1 - %2<br \/>Main oleh: %3",
+      "updates":"Sekarang Memainkan: %1 - %2<br />Main oleh: %3",
       "meh":"meh Lagu ini",
       "join":"menyertai bilik",
       "leave":"meninggalkan bilik",
       "history":"Lagu adalah dalam senarai sejarah (%1 - %2)",
       "historySkipped":"Lagu adalah dalam senarai sejarah (%1 - %2), tetapi telah dilangkau pada main yang terakhir",
       "songLength":"Lagu adalah panjang dari %1 minit",
+      "songDeleted":"Lagu telah dipadamkan",
       "songPrivate":"Lagu adalah peribadi",
+      "songRejected":"Lagu telah ditolak disebabkan %1",
       "songNotFound":"Lagu yang tidak dijumpai",
       "songEmbed":"Lagu telah menutup fungsi embed",
       "songStreamable":"Lagu tidak menyokong aliran"
@@ -116,6 +118,7 @@
   "info":{
     "header":"Maklumat pengguna",
     "name":"Nama",
+    "profile":"Profil Pengguna",
     "title":"Title",
     "specialTitles":{
       "developer":"plug&#179; Pemaju",
@@ -137,10 +140,10 @@
     "points":"Points",
     "wootCount":"Woot Kiraan",
     "mehCount":"Meh Kiraan",
-    "ratio":"Woot\/Meh nisbah",
+    "ratio":"Woot/Meh nisbah",
     "djing":"Sedang DJing",
     "notInList":"Tidak berada dalam senarai menunggu atau booth",
-    "inWaitlist":"%1\/%2 dalam senarai menunggu",
+    "inWaitlist":"%1/%2 dalam senarai menunggu",
     "userDjing":"%1 adalah DJing pada masa ini ",
     "userNextDJ":"%1 adalah DJing seterusnya",
     "disconnects":"Disconnects",
@@ -165,6 +168,11 @@
     "infoHeaderCredits":"Tetapan yang khas bilik ini di tetapkan oleh %1",
     "infoDisable":"Anda boleh menghentikannya dalam menu"
   },
+  "menuHeaders":{
+    "features":"Ciri-ciri",
+    "chatnotifs":"Pemberitahuan Chat",
+    "controlpanel":"Panel Kawalan"
+  },
   "menu":{
     "autowoot":"Autowoot",
     "autojoin":"Auto menyertai",
@@ -180,7 +188,14 @@
     "controlpanel":"Panel Kawalan",
     "showdeletedmessages":"Menunjukkan Mesej dipadamkan",
     "visualizers":"RCS SoundCloud Visualizer",
-    "inlineuserinfo":"Maklumat pengguna Inline"
+    "inlineuserinfo":"Maklumat pengguna Inline",
+    "about":"Menganai plugCubed",
+    "background":"Menukar latar belakang",
+    "chatcustomizations":"Penyesuaian Chat",
+    "commands":"Perintah chat",
+    "customcss":"Kustom CSS",
+    "lowlagMode":"Low Lag Mode",
+    "workMode":"Work Mode"
   },
   "vote":{
     "meh":"Meh",
@@ -189,27 +204,69 @@
     "undecided":"Belum Memutuskan",
     "djing":"DJing"
   },
+  "customchatcolors":{
+    "userRanksHeader":"Pangkat Pengguna",
+    "chatnotifs":"Pemberitahuan Chat"
+  },
+  "panels":{
+    "about":{
+      "header":"Maklumat tentang plug³",
+      "version":"Versi",
+      "website":"Laman web",
+      "websiteText":"laman web plug&#179;",
+      "translations":"Terjemahan",
+      "translationsText":"Terjemahan plug&#179;",
+      "websitetranslationsText":"Terjemahan Laman Web plug&#179;"
+    },
+    "background":{
+      "description":"Menetapkan latar belakang bilik anda sendiri"
+    },
+    "buttons":{
+      "cancel":"Batal",
+      "clear":"Kosongkan",
+      "submit":"Hantar"
+    },
+    "chatcustomizations":{
+      "description":"Menyesuaikan chat anda dengan emoji, pemberitahuan, markdown, dan ciri-ciri lain",
+      "mentionSoundTitle":"Buyin Penyebut %1",
+      "emotesHeader":"Emotes",
+      "chatenhancementHeader":"Penambahbaikan Chat",
+      "emotesSetHeader":"Set Emoji"
+    },
+    "customcss":{
+      "description":"Menetapkan CSS bilik anda sendiri"
+    }
+  },
   "tooltip":{
-    "stream":"Togol Video\/Audio Stream",
+    "stream":"Togol Video/Audio Stream",
     "clear":"Memadamkan Chat",
     "afk":"AFK mesej",
     "reset":"Tetapkan semula kepada lalai",
     "muted":"Semua lagu adalah disenyapkan",
-    "mutedOnce":"Lagu semasa adalah disenyapkan"
+    "mutedOnce":"Lagu semasa adalah disenyapkan",
+    "quickBan":"Ban pengguna selama-lamanya",
+    "quickMute":"Membisukan pengguna untuk 45 minit",
+    "userInfo":"Maklumat Pengguna"
   },
   "error":{
     "userNotFound":"Pengguna tidak dijumpai",
     "alreadyInWaitList":"Pengguna %1 telah berada dalam senarai menunggu",
     "notInWaitList":"Pengguna %1 tidak berada dalam senarai menunggu",
     "unknownMenuKey":"menu key tidak diketahui: %1",
-    "invalidAddSyntax":"Sintaks tidak sah untuk arahan tambahan. Cara: \/add @pengguna",
-    "invalidBanSyntax":"Sintaks tidak sah untuk arahan Melarang. Cara: \/ban @pengguna atau \/ban @pengguna::time::Sebab",
+    "invalidAddSyntax":"Sintaks tidak sah untuk arahan tambahan. Cara: /add @pengguna",
+    "invalidBanSyntax":"Sintaks tidak sah untuk arahan Melarang. Cara: /ban @pengguna atau /ban @pengguna::time::Sebab",
     "invalidBanTime":"Masa yang dinyatakan, %1 tidak sah. Masa yang sah adalah 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Sintaks tidak sah untuk arahan mengeluarkan. Cara: \/remove @pengguna",
-    "invalidWhoisSyntax":"Sintaks tidak sah untuk arahan whois. Cara: \/whois @pengguna",
+    "invalidRemoveSyntax":"Sintaks tidak sah untuk arahan mengeluarkan. Cara: /remove @pengguna",
+    "invalidWhoisSyntax":"Sintaks tidak sah untuk arahan whois. Cara: /whois @pengguna",
     "errorGettingPlaylistInfo":"Ralat untuk mendapatkan maklumat senarai main",
     "noPlaylistsFound":"Tiada senarai main dijumpai",
     "yourActivePlaylistIsFull":"Senarai main yang aktif anda telah penuh",
     "noNextSong":"Anda tidak menpunyai lagu untuk beratur"
+  },
+  "video":{
+    "show":"Menunjukkan",
+    "hide":"Menyembuyikan",
+    "menushow":"Papar Video",
+    "menuhide":"Sembuyikan Video"
   }
 }
