--- a/src/alpha/langs/lang.nl.json
+++ b/src/alpha/langs/lang.nl.json
@@ -1,17 +1,15 @@
 {
   "running":"Je gebruikt plug&#179; versie %1",
-  "commandsHelp":"Gebruik '\/commands' om alle chat commando's te zien",
+  "commandsHelp":"Gebruik '/commands' om alle chat commando's te zien",
   "autorespond":{
     "default":"Ik ben niet op mijn pc!",
     "disable":"Zet AFK Automatisch Reageren af om te chatten",
     "nextIn":"De volgende AFK Automatisch Reageren word verzonden van %1",
     "next":"AFK autorespond op de volgende vermelding",
-    "commandDisable":"%1 Join automatisch",
-    "commandNotEnabled":"%1 automatisch joinen was niet ingeschakeld"
+    "commandDisable":"%1 Join automatisch"
   },
   "autojoin":{
-    "commandDisable":"%1 Join automatisch",
-    "commandNotEnabled":"%1 automatisch joinen was niet ingeschakeld"
+    "commandDisable":"%1 Join automatisch"
   },
   "fullscreen":{
     "shrink":"Verkleinen",
@@ -41,7 +39,7 @@
       "alertson":"Maak geluid waneer gedefinieerde woorden zijn geschreven in de chat",
       "alertsoff":"Stop geluid spelen wanneer gedefinieerde woorden zijn geschreven in de chat",
       "grab":"Voeg de huidige track toe aan je geselecteerde afspeellijst",
-      "badges":"toon\/verberg de gebruiker badges in chat",
+      "badges":"toon/verberg de gebruiker badges in chat",
       "getpos":"Krijg huidige wachtlijst positie",
       "version":"Weergeef versienummer",
       "commands":"Laat deze lijst zien",
@@ -57,7 +55,8 @@
       "whois all":"geeft gebruikerID en gebruikernaam van iedere gebruiker in de kamer",
       "banall":"Verbied alle gebruikers in de kamer",
       "status":"toon status van plug servers",
-      "unload":"Sluit plug&#179;"
+      "unload":"Sluit plug&#179;",
+      "volume":"Set volume with a number (0 - 100), increase by 1 with +, decrease by 1 with -"
     },
     "responses":{
       "alertson":"Geluid afspelen bij de volgende woorden: %1",
@@ -84,30 +83,33 @@
     "joinTime":"Als je nu toetreed tot de wachtlijst ben je aan het DJ'en in ongeveer %1!"
   },
   "notify":{
-    "header":"Gebruiker informatie",
+    "deletedMessages":"deleted by ",
     "join":"Gebruiker join",
     "leave":"Gebruiker gaat weg",
     "grab":"Gebruiker heeft gegrabbed",
     "meh":"Gebruiker Mehs",
     "stats":"Nummer Statistieken",
     "updates":"Nummer Updates",
+    "updatesLink":"Song Link",
     "history":"Nummers in geschiedenis",
     "songUnavailable":"Song niet beschikbaar",
-    "boothAlert":"Booth Alert (%1 \/ 50)",
+    "boothAlert":"Booth Alert (%1 / 50)",
     "songLength":"Lengte van een nummer (1% min)",
     "message":{
       "boothAlertNext":"You are about to DJ!",
       "boothAlertPos":"You are now %1 in the waitlist",
       "grab":"gegrabbed %1 - %2",
       "stats":"Status: %1 woots - %2 mehs - %3 grabs",
-      "updates":"Nu aan het spelen: %1 by %2<br\/> Gespeeld door: %3",
+      "updates":"Nu aan het spelen: %1 by %2<br/> Gespeeld door: %3",
       "meh":"%1 Heeft deze track gemeh'd",
       "join":"kamer binnen gekomen",
       "leave":"kamer verlaten",
       "history":"Dit liedje is nog steeds in de geschiedenis (%1 van %2)",
       "historySkipped":"Liedje in geschiedenis (%1 van %2), maar is overgeslagen bij de vorige keer dat het gedraaid is",
       "songLength":"Lied is langer dan %1 minuten",
+      "songDeleted":"Song is deleted",
       "songPrivate":"Song is privé",
+      "songRejected":"Song is rejected due to %1",
       "songNotFound":"Song niet gevonden",
       "songEmbed":"Song kan niet embed worden",
       "songStreamable":"Song kan niet gestreamed worden"
@@ -116,6 +118,7 @@
   "info":{
     "header":"Gebruiker informatie",
     "name":"Naam",
+    "profile":"User Profile",
     "title":"Titel",
     "specialTitles":{
       "developer":"plug&#179; Ontwikkelaar",
@@ -137,10 +140,10 @@
     "points":"Punten",
     "wootCount":"Woot aantal",
     "mehCount":"Meh aantal",
-    "ratio":"Woot\/Meh Verhouding",
+    "ratio":"Woot/Meh Verhouding",
     "djing":"Aan het DJen",
     "notInList":"Niet op de wachtlijst of op het podium",
-    "inWaitlist":"%1\/%2 in de wachtlijst",
+    "inWaitlist":"%1/%2 in de wachtlijst",
     "userDjing":"%1 zijn op dit moment DJing",
     "userNextDJ":"%1 DJing volgende ",
     "disconnects":"Aantal verbroken verbindingen",
@@ -165,6 +168,11 @@
     "infoHeaderCredits":"Deze kamer gebruikt speciale instellingen door %1",
     "infoDisable":"U kunt ze uitschakelen in het menu"
   },
+  "menuHeaders":{
+    "features":"Features",
+    "chatnotifs":"Chat Notifications",
+    "controlpanel":"Configuratiescherm"
+  },
   "menu":{
     "autowoot":"Autowoot",
     "autojoin":"AutoJoin",
@@ -180,7 +188,14 @@
     "controlpanel":"Configuratiescherm",
     "showdeletedmessages":"Toon verwijderde berichten",
     "visualizers":"RCS SoundCloud Visualizer",
-    "inlineuserinfo":"Inline User Info"
+    "inlineuserinfo":"Inline User Info",
+    "about":"About plugCubed",
+    "background":"Change background",
+    "chatcustomizations":"Chat Customizations",
+    "commands":"Chat commands",
+    "customcss":"Custom CSS",
+    "lowlagMode":"Low Lag Mode",
+    "workMode":"Work Mode"
   },
   "vote":{
     "meh":"Meh",
@@ -189,27 +204,69 @@
     "undecided":"Niet besloten",
     "djing":"Aan het DJen"
   },
+  "customchatcolors":{
+    "userRanksHeader":"User Ranks",
+    "chatnotifs":"Chat Notifications"
+  },
+  "panels":{
+    "about":{
+      "header":"Information about plug³",
+      "version":"Version",
+      "website":"Website",
+      "websiteText":"plug&#179; Website",
+      "translations":"Translations",
+      "translationsText":"plug&#179; Translations",
+      "websitetranslationsText":"plug&#179; Website Translations"
+    },
+    "background":{
+      "description":"Set your own room background"
+    },
+    "buttons":{
+      "cancel":"Cancel",
+      "clear":"Clear",
+      "submit":"Submit"
+    },
+    "chatcustomizations":{
+      "description":"Customize your chat with emojis, notifications, markdown, and other features",
+      "mentionSoundTitle":"Mention Sound %1",
+      "emotesHeader":"Emotes",
+      "chatenhancementHeader":"Chat Enhancements",
+      "emotesSetHeader":"Emoji Set"
+    },
+    "customcss":{
+      "description":"Set your own room CSS"
+    }
+  },
   "tooltip":{
-    "stream":"Video\/Audio Stream Aan\/Uit",
+    "stream":"Video/Audio Stream Aan/Uit",
     "clear":"Maak chat schoon ",
     "afk":"AFK Bericht",
     "reset":"Reset naar standaard",
     "muted":"Alle liedjes zijn gedempt",
-    "mutedOnce":"Huidig lied is gedempt"
+    "mutedOnce":"Huidig lied is gedempt",
+    "quickBan":"Ban user forever",
+    "quickMute":"Mute user for 45 mins",
+    "userInfo":"User Info"
   },
   "error":{
     "userNotFound":"Gebruiker niet gevonden",
     "alreadyInWaitList":"Gebruiker %1 bevindt zich al in de wachtlijst",
     "notInWaitList":"Gebruiker %1 staat niet in de wachtlijst",
     "unknownMenuKey":"Onbekende menu key: %1",
-    "invalidAddSyntax":"Ongeldige syntax voor add comando. Gebruik: \/add @gebruiker",
-    "invalidBanSyntax":"Ongeldige syntax voor ban commando. Gebruik: \/ban @gebruiker of \/ban @gebruiker::tijd::reden",
+    "invalidAddSyntax":"Ongeldige syntax voor add comando. Gebruik: /add @gebruiker",
+    "invalidBanSyntax":"Ongeldige syntax voor ban commando. Gebruik: /ban @gebruiker of /ban @gebruiker::tijd::reden",
     "invalidBanTime":"Te gespecificeerde tijd, %1 is ongeldig. Geldige tijden zijn 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Ongeldige syntax voor remove commando. Gebruik: \/remove @gebruiker",
-    "invalidWhoisSyntax":"Ongeldige syntax voor whois commando. Gebruik: \/whois @gebruiker",
+    "invalidRemoveSyntax":"Ongeldige syntax voor remove commando. Gebruik: /remove @gebruiker",
+    "invalidWhoisSyntax":"Ongeldige syntax voor whois commando. Gebruik: /whois @gebruiker",
     "errorGettingPlaylistInfo":"Fout bij het verkrijgen van afspeellijst info",
     "noPlaylistsFound":"Geen afspeellijsten gevonden",
     "yourActivePlaylistIsFull":"Uw actieve afspeellijst is vol",
     "noNextSong":"Je hebt geen songs in je afspeellijst"
+  },
+  "video":{
+    "show":"Show",
+    "hide":"Hide",
+    "menushow":"Show Video",
+    "menuhide":"Hide Video"
   }
 }
