--- a/src/alpha/langs/lang.ro.json
+++ b/src/alpha/langs/lang.ro.json
@@ -1,17 +1,15 @@
 {
   "running":"Folosind plug&#179; versiunea %1",
-  "commandsHelp":"Scrie '\/commands' pentru a vedea in chat o lista cu comenzi.",
+  "commandsHelp":"Scrie '/commands' pentru a vedea in chat o lista cu comenzi.",
   "autorespond":{
     "default":"Nu sunt la tastatura.",
     "disable":"Dezactivaţi AFK Autorespond in chat",
     "nextIn":"Următorul AFK Autorespond va fi trimis de la %1",
     "next":"AFK Autorespond pe următoarea mentionare",
-    "commandDisable":"%1 AFK mesaj dezactivat",
-    "commandNotEnabled":"Mesajul de AFK %1 nu a fost activat"
+    "commandDisable":"%1 AFK mesaj dezactivat"
   },
   "autojoin":{
-    "commandDisable":"%1 autojoin dezactivat",
-    "commandNotEnabled":"%1 autojoin nu a fost activat"
+    "commandDisable":"%1 autojoin dezactivat"
   },
   "fullscreen":{
     "shrink":"Micșorează",
@@ -31,7 +29,7 @@
     },
     "descriptions":{
       "join":"Alatură-te listei de aşteptare",
-      "leave":"paraseste dj booth\/waitlist",
+      "leave":"paraseste dj booth/waitlist",
       "whoami":"obţine informaţii proprii",
       "mute":"volumul setat la 0",
       "automute":"inregistreaza melodia care canta pentru mute la eventualele replayuri",
@@ -41,7 +39,7 @@
       "alertson":"redă sunet când cuvintele selectate sunt scrise in chat",
       "alertsoff":"opreşte redarea sunetului când un cuvânt selectat este scris in chat",
       "grab":"adaugă melodia curentă la playlist-ul tău",
-      "badges":"arată\/ascunde insigna utilizatorului în chat",
+      "badges":"arată/ascunde insigna utilizatorului în chat",
       "getpos":"obtine informatii despre pozitia in waitlist",
       "version":"arata versiunea",
       "commands":"Arată această listă",
@@ -52,12 +50,13 @@
       "lockskip":"blocheaza DJ booth, sare peste şi deblochează după",
       "lock":"blochează Dj booth",
       "unlock":"deblochează DJ booth",
-      "add":"adauga utilizatorul la dj booth\/waitlist",
-      "remove":"sterge utilizatorul din dj booth\/waitlist",
+      "add":"adauga utilizatorul la dj booth/waitlist",
+      "remove":"sterge utilizatorul din dj booth/waitlist",
       "whois all":"ofera userid si username tuturor utilizatorilor din camera",
       "banall":"baneaza toti utilizatorii din camera",
       "status":"vezi statusul serverelor plug",
-      "unload":"Closes plug&#179;"
+      "unload":"Closes plug&#179;",
+      "volume":"Set volume with a number (0 - 100), increase by 1 with +, decrease by 1 with -"
     },
     "responses":{
       "alertson":"Se redă sunetul pentru următoarele cuvinte: %1",
@@ -84,30 +83,33 @@
     "joinTime":"Dacă vei intra în lista de așteptare acum, o să fii DJ în aproximativ %1!"
   },
   "notify":{
-    "header":"Notificari Chat",
+    "deletedMessages":"deleted by ",
     "join":"Utilizator Intrat",
     "leave":"Utilizator Iesit",
     "grab":"Apucare de Utilizator",
     "meh":"Meh'uri ale utilizatorilor",
     "stats":"Statistici Melodii",
     "updates":"Updateuri Melodii",
+    "updatesLink":"Song Link",
     "history":"Istoric melodii",
     "songUnavailable":"Melodie indisponibilă",
-    "boothAlert":"Booth Alert (%1 \/ 50)",
+    "boothAlert":"Booth Alert (%1 / 50)",
     "songLength":"Lungime melodie (%1 min)",
     "message":{
       "boothAlertNext":"You are about to DJ!",
       "boothAlertPos":"You are now %1 in the waitlist",
       "grab":"%1 a apucat %2 - %3",
       "stats":"Statistici: %1 woots--%2 mehs --%3 curates",
-      "updates":"Acum canta: %1 de %2<br \/>Pus de: %3",
+      "updates":"Acum canta: %1 de %2<br />Pus de: %3",
       "meh":"Lui %1 nu îi place această piesă",
       "join":"a intrat în cameră",
       "leave":"a ieșit din cameră",
       "history":"Piesa este în istoric (%1 din %2)",
       "historySkipped":"Piesa este in istoric (%1 din %2), dar a fost sarita in ultimul play",
       "songLength":"Piesa are mai mult de %1 minut",
+      "songDeleted":"Song is deleted",
       "songPrivate":"Melodia este privată",
+      "songRejected":"Song is rejected due to %1",
       "songNotFound":"Melodia nu a fost găsită",
       "songEmbed":"Melodia are încorporarea dezactivată",
       "songStreamable":"Melodia nu suportă streaming-ul"
@@ -116,6 +118,7 @@
   "info":{
     "header":"Informaţii utilizator",
     "name":"Nume",
+    "profile":"User Profile",
     "title":"Titlu",
     "specialTitles":{
       "developer":"plug&#179; Developer",
@@ -137,10 +140,10 @@
     "points":"Puncte",
     "wootCount":"Woot Cota",
     "mehCount":"Meh Cota",
-    "ratio":"Raportul Woot\/Meh",
+    "ratio":"Raportul Woot/Meh",
     "djing":"Dj-ul curent",
     "notInList":"Nu este in waitlist si nici in booth",
-    "inWaitlist":"%1\/%2 în lista de aşteptare",
+    "inWaitlist":"%1/%2 în lista de aşteptare",
     "userDjing":"In prezent sunt %1 DJ",
     "userNextDJ":"Mai sunt %1 Dj",
     "disconnects":"Deconectează",
@@ -165,6 +168,11 @@
     "infoHeaderCredits":"Această cameră foloseşte setări speciale de %1",
     "infoDisable":"Le puteţi dezactiva in meniu"
   },
+  "menuHeaders":{
+    "features":"Features",
+    "chatnotifs":"Chat Notifications",
+    "controlpanel":"Panou de Control"
+  },
   "menu":{
     "autowoot":"Autowoot",
     "autojoin":"Autojoin",
@@ -180,7 +188,14 @@
     "controlpanel":"Panou de Control",
     "showdeletedmessages":"Arată mesajele șterse",
     "visualizers":"RCS SoundCloud Visualizers",
-    "inlineuserinfo":"Inline User Info"
+    "inlineuserinfo":"Inline User Info",
+    "about":"About plugCubed",
+    "background":"Change background",
+    "chatcustomizations":"Chat Customizations",
+    "commands":"Chat commands",
+    "customcss":"Custom CSS",
+    "lowlagMode":"Low Lag Mode",
+    "workMode":"Work Mode"
   },
   "vote":{
     "meh":"Meh",
@@ -189,27 +204,69 @@
     "undecided":"Indecis",
     "djing":"DJ"
   },
+  "customchatcolors":{
+    "userRanksHeader":"User Ranks",
+    "chatnotifs":"Chat Notifications"
+  },
+  "panels":{
+    "about":{
+      "header":"Information about plug³",
+      "version":"Version",
+      "website":"Website",
+      "websiteText":"plug&#179; Website",
+      "translations":"Translations",
+      "translationsText":"plug&#179; Translations",
+      "websitetranslationsText":"plug&#179; Website Translations"
+    },
+    "background":{
+      "description":"Set your own room background"
+    },
+    "buttons":{
+      "cancel":"Cancel",
+      "clear":"Clear",
+      "submit":"Submit"
+    },
+    "chatcustomizations":{
+      "description":"Customize your chat with emojis, notifications, markdown, and other features",
+      "mentionSoundTitle":"Mention Sound %1",
+      "emotesHeader":"Emotes",
+      "chatenhancementHeader":"Chat Enhancements",
+      "emotesSetHeader":"Emoji Set"
+    },
+    "customcss":{
+      "description":"Set your own room CSS"
+    }
+  },
   "tooltip":{
-    "stream":"Comuta Video\/Audio Stream",
+    "stream":"Comuta Video/Audio Stream",
     "clear":"Curata Chatul",
     "afk":"Mesaj AFK",
     "reset":"Resetare la valori implicite",
     "muted":"Toate melodiile au mute",
-    "mutedOnce":"Melodia curentă este muta"
+    "mutedOnce":"Melodia curentă este muta",
+    "quickBan":"Ban user forever",
+    "quickMute":"Mute user for 45 mins",
+    "userInfo":"User Info"
   },
   "error":{
     "userNotFound":"Utilizator negăsit",
     "alreadyInWaitList":"Utilizatorul %1 este deja în lista de așteptare",
     "notInWaitList":"Utilizatorul %1 nu este în lista de așteptare",
     "unknownMenuKey":"Tasta meniu necunoscuta: %1",
-    "invalidAddSyntax":"Sintaxă invalidă pentru comanda add. Folosește: \/add @user",
-    "invalidBanSyntax":"Sintaxă invalidă pentru comanda ban. Folosește: \/ban @user sau \/ban @user::timp::motiv",
+    "invalidAddSyntax":"Sintaxă invalidă pentru comanda add. Folosește: /add @user",
+    "invalidBanSyntax":"Sintaxă invalidă pentru comanda ban. Folosește: /ban @user sau /ban @user::timp::motiv",
     "invalidBanTime":"Timpul specificat, %1 este invalid. Timpurile valide sunt 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Sintaxă invalidă pentru comanda remove. Folosește: \/remove @user",
-    "invalidWhoisSyntax":"Sintaxă invalidă pentru comanda whois. Folosește: \/whois @user",
+    "invalidRemoveSyntax":"Sintaxă invalidă pentru comanda remove. Folosește: /remove @user",
+    "invalidWhoisSyntax":"Sintaxă invalidă pentru comanda whois. Folosește: /whois @user",
     "errorGettingPlaylistInfo":"Eroare la obținerea informațiilor din playlist",
     "noPlaylistsFound":"Nici un playlist găsit",
     "yourActivePlaylistIsFull":"Playlist-ul activ este plin",
     "noNextSong":"Nu ai nici o melodie în coada de așteptare"
+  },
+  "video":{
+    "show":"Show",
+    "hide":"Hide",
+    "menushow":"Show Video",
+    "menuhide":"Hide Video"
   }
 }
